git-svn-id: svn://47.95.215.33/svntest/IDEA/CWXT@404 9fcc6062-377a-4b28-b710-9bc06e04782a

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,6 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.quartz-scheduler</groupId>
@@ -273,6 +272,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
