--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -1,6 +1,6 @@
 #mysql数据库
 driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://47.95.215.33:3306/dbwhjt?autoReconnect=true
+jdbc.url=jdbc:mysql://47.95.215.33:3306/dbwhjt_test?autoReconnect=true
 jdbc.username=root
 jdbc.password=liyunwen0506
 #rabbitmq数据库链接
